# debate-eval-sycophancy

./: .gitignore  batch-eval-requests.py  main.py  pdf-parsing.py  pyproject.toml  structured-data-to-table.py
data/: debatabase-book-arguments.parquet  debatabase_book_toc.json  parsed-all.json
notes/: eval.md
