[project]
name = "debate-eval-sycophancy"
version = "0.1.0"
description = "Evaluating effects of user identification in LLM debate evaluation"
requires-python = ">=3.11"
dependencies = ["PyMuPDF", "openai", "pydantic", "pandas", "pandas-stubs", "pyarrow"]

[dependency-groups]
dev = ["mypy", "black", "ipykernel"]
